Update review in order to allow partial updates
