# REST APIs Implementation/controllers/ReviewsController.js
@@ -127,12 +127,6 @@ module.exports.updateSingleReview = function updateSingleReview (req, res, next)
   {
     utils.writeJson(res, { errors: [{ 'param': 'Server', 'msg': 'The reviewerId is not equal the id of the requesting user.' }], }, 400);
   }
-  else if(req.body.completed == undefined) {
-    utils.writeJson(res, { errors: [{ 'param': 'Server', 'msg': 'The completed property is absent.' }], }, 400);
-  }
-  else if(req.body.completed == false) {
-    utils.writeJson(res, { errors: [{ 'param': 'Server', 'msg': 'The completed property is false, but it should be set to true.' }], }, 400);
-  }
   else {
     Reviews.updateSingleReview(req.body, req.params.filmId, req.params.reviewerId)
     .then(function(response) {
@@ -141,6 +135,9 @@ module.exports.updateSingleReview = function updateSingleReview (req, res, next)
     .catch(function(response) {
         if(response == 403){
             utils.writeJson(res, { errors: [{ 'param': 'Server', 'msg': 'The user is not a reviewer of the film' }], }, 403);
+        }
+        else if(response == 409){
+          utils.writeJson(res, { errors: [{ 'param': 'Server', 'msg': 'The review has been already completed, so the review cannot be updated anymore.' }], }, 409);
         }
         else if (response == 404){
             utils.writeJson(res, { errors: [{ 'param': 'Server', 'msg': 'The review does not exist.' }], }, 404);
